# Nova

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  resources.rc
Nova/: CMakeLists.txt
Nova/include/: Nova.h
Nova/include/Nova/: Log.h
Nova/src/: Log.cpp  Nova.cpp
Sandbox/: CMakeLists.txt
Sandbox/src/: Sandbox.cpp
